--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="./styles/styles.css" />
   </head>
   <body>
-    <nav class="uk-navbar-container uk-margin" uk-navbar>
+    <nav class="uk-navbar-container" uk-navbar>
       <div class="uk-navbar-left">
         <a class="uk-navbar-item uk-logo" href="#">REVERA</a>
       </div>
@@ -43,13 +43,12 @@
       </div>
     </nav>
     <header>
-      <div class="header-image">
         <div
-          class="uk-position-relative uk-visible-toggle uk-light"
+          class="uk-position-relative uk-visible-toggle uk-light "
           tabindex="-1"
           uk-slideshow
         >
-          <ul class="uk-slideshow-items">
+          <ul class="uk-slideshow-items ">
             <li>
               <img src="./starter-code/img/slider-1.jpg" alt="" uk-cover />
             </li>
@@ -64,46 +63,45 @@
             </li>
           </ul>
           <a
-            class="uk-position-center-left uk-position-small uk-hidden-hover"
+            class="uk-slidenav-large uk-position-center-left uk-position-small uk-visible@m red-box"
             href="#"
             uk-slidenav-previous
             uk-slideshow-item="previous"
           ></a>
           <a
-            class="uk-position-center-right uk-position-small uk-hidden-hover"
+            class="uk-slidenav-large uk-position-center-right uk-position-small uk-visible@m red-box"
             href="#"
             uk-slidenav-next
             uk-slideshow-item="next"
           ></a>
-          <section class="functionality uk-flex">
-            <div class="uk-card uk-card-default uk-card-body uk-width-1-3@m">
-              <h3 class="uk-card-title">Web design</h3>
-              <p>
-                Lorem ipsum <a href="#">dolor</a> sit amet, consectetur
-                adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua.
-              </p>
-            </div>
-            <div class="uk-card uk-card-default uk-card-body uk-width-1-3@m">
-              <h3 class="uk-card-title">Web development</h3>
-              <p>
-                Lorem ipsum <a href="#">dolor</a> sit amet, consectetur
-                adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua.
-              </p>
-            </div>
-            <div class="uk-card uk-card-default uk-card-body uk-width-1-3@m">
-              <h3 class="uk-card-title">User interface</h3>
-              <p>
-                Lorem ipsum <a href="#">dolor</a> sit amet, consectetur
-                adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua.
-              </p>
-            </div>
-          </section>
         </div>
-      </div>
     </header>
+    <section class="functionality uk-grid data-uk-grid-margin">
+      <div class="uk-card uk-card-default uk-card-body uk-width-1-3 data-uk-grid-match">
+        <h3 class="uk-card-title">Web design</h3>
+        <p>
+          Lorem ipsum <a href="#">dolor</a> sit amet, consectetur
+          adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+          dolore magna aliqua.
+        </p>
+      </div>
+      <div class="uk-card uk-card-default uk-card-body uk-width-1-3 data-uk-grid-match">
+        <h3 class="uk-card-title">Web development</h3>
+        <p>
+          Lorem ipsum <a href="#">dolor</a> sit amet, consectetur
+          adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+          dolore magna aliqua.
+        </p>
+      </div>
+      <div class="uk-card uk-card-default uk-card-body uk-width-1-3 data-uk-grid-match">
+        <h3 class="uk-card-title">User interface</h3>
+        <p>
+          Lorem ipsum <a href="#">dolor</a> sit amet, consectetur
+          adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+          dolore magna aliqua.
+        </p>
+      </div>
+    </section>
     <section class="projects uk-flex">
       <div>
         <div class="uk-card uk-card-default">
